--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://linkedin.com/in/EvanFabry" />
+<!-- <meta http-equiv="refresh" content="0; url=https://linkedin.com/in/EvanFabry" /> -->
+<img src="img/Shot-2.jpg">
