--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!-- <meta http-equiv="refresh" content="0; url=https://linkedin.com/in/EvanFabry" /> -->
-<img src="img/Shot-2.jpg">
+<img src="img/Shot-2.jpg" height="250">
