--- a/index.html
+++ b/index.html
@@ -1,2 +1,109 @@
 <!-- <meta http-equiv="refresh" content="0; url=https://linkedin.com/in/EvanFabry" /> -->
-<img src="img/Shot-2.jpg" height="250">
+<head>
+<link rel="stylesheet" type="text/css" href="static/style.css">
+</head>
+
+<body>
+    <div class="grid large" itemscope="" itemtype="http://schema.org/Person">
+        <div class="row">
+            <div class="col8 pre1">
+                <h1>Evan Fabry </h1>
+            </div>
+        </div>
+        <div class="row">
+            <!-- <div class="col8 pre1"> -->
+            <div class="col-4">
+                <img src="img/Shot-2.jpg" height="250">
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+
+
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+            </div>
+        </div>
+    </div>
+</body>
