--- a/index.html
+++ b/index.html
@@ -16,93 +16,240 @@
                 <img src="img/Shot-2.jpg" height="250">
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
 
 
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
         </div>
 
         <div class="row">
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
         </div>
 
         <div class="row">
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
             <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img src="img/LinkedInTransparent.png" height="100"> </a>
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
         </div>
     </div>
