--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <!-- <div class="col8 pre1"> -->
             <div class="col-4">
-                <img src="img/Shot-2.jpg" height="250">
+                <img class="headshot" src="img/Shot-2.jpg">
             </div>
             <div class="col-2">
                 <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
