--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
 </head>
 
 <body>
+
     <div class="grid large" itemscope="" itemtype="http://schema.org/Person">
         <div class="row">
             <div class="col8 pre1">
-                <h1>Evan Fabry </h1>
+                <h1>Evan  </h1>
+                <h1 style="padding-left: 80px">Fabry </h1>
             </div>
         </div>
         <div class="row">
             <!-- <div class="col8 pre1"> -->
             <div class="col-4">
                 <img class="headshot" src="img/Shot-2.jpg">
+                <audio controls>
+                    <source src="media/02 リサフランク420 _ 現代のコンピュー.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
             </div>
             <div class="col-2">
                 <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
