--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
 
     <div class="grid large" itemscope="" itemtype="http://schema.org/Person">
         <div class="row">
-            <div class="col8 pre1">
+            <div class="col-7">
                 <h1>Evan  </h1>
                 <h1 style="padding-left: 80px">Fabry </h1>
             </div>
+            <div class="col-2">
+                <a href="https://github.com/EvanFabry"> <img class="GitHub" src="img/github-512.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://github.com/EvanFabry"> <img class="GitHub" src="img/github-512.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://github.com/EvanFabry"> <img class="GitHub" src="img/github-512.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://github.com/EvanFabry"> <img class="GitHub" src="img/github-512.png"> </a>
+            </div>
         </div>
+
+
         <div class="row">
             <!-- <div class="col8 pre1"> -->
             <div class="col-4">
@@ -34,7 +48,6 @@
                 <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
 
-
             <div class="col-2">
                 <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
@@ -49,26 +62,6 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-        </div>
 
         <div class="row">
             <div class="col-2">
@@ -91,26 +84,6 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-        </div>
 
         <div class="row">
             <div class="col-2">
@@ -133,26 +106,6 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-        </div>
 
         <div class="row">
             <div class="col-2">
@@ -175,26 +128,6 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-            <div class="col-2">
-                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
-            </div>
-        </div>
 
         <div class="row">
             <div class="col-2">
@@ -217,6 +150,7 @@
             </div>
         </div>
 
+
         <div class="row">
             <div class="col-2">
                 <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
@@ -237,6 +171,95 @@
                 <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
         </div>
+
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-2">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+        </div>
+
 
         <div class="row">
             <div class="col-2">
