--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!-- <meta http-equiv="refresh" content="0; url=https://linkedin.com/in/EvanFabry" /> -->
 <head>
 <link rel="stylesheet" type="text/css" href="static/style.css">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-32109466-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
