--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
         <div class="row">
             <!-- <div class="col-7"> -->
-                <h1>Evan  </h1>
-                <h1 style="padding-left: 80px;">Fabry </h1>
+                <a class="name" href="https://www.google.com/#q=Evan+Fabry">
+                    <h1>Evan</h1>
+                    <h1 style="padding-left: 80px;">Fabry</h1>
+                </a>
             <!-- </div> -->
         </div>
 
@@ -342,5 +344,34 @@
                 <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
             </div>
         </div>
+
+
+        <br><br>
+        </div>
+        <div class="row">
+            <div class="col-1_5">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png" style="margin-left: 0px"> </a>
+            </div>
+            <div class="col-1_5">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-1_5">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-1_5">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-1_5">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-1_5">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
+            <div class="col-1_5">
+                <a href="https://github.com/EvanFabry"> <img class="GitHub" src="img/github-512.png"> </a>
+            </div>
+            <div class="col-1_5">
+                <a href="https://linkedin.com/in/EvanFabry"> <img class="LinkedIn" src="img/LinkedInTransparent.png"> </a>
+            </div>
     </div>
 </body>
