--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- <div class="col8 pre1"> -->
             <div class="col-4">
                 <img class="headshot" src="img/Shot-2.jpg">
-                <audio controls>
+                <audio controls autoplay>
                     <source src="media/02 リサフランク420 _ 現代のコンピュー.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
