--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<meta http-equiv="REFRESH" content="url=http://www.youtube.com">
+
+
+
 <!-- <meta http-equiv="refresh" content="0; url=https://linkedin.com/in/EvanFabry" /> -->
 <head>
 <link rel="stylesheet" type="text/css" href="static/style.css">
