--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-<meta http-equiv="REFRESH" content="url=http://www.youtube.com">
-
-
-
 <!-- <meta http-equiv="refresh" content="0; url=https://linkedin.com/in/EvanFabry" /> -->
 <head>
+<meta http-equiv="REFRESH" content="0;url=http://www.youtube.com">
 <link rel="stylesheet" type="text/css" href="static/style.css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
